--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to My Website!</h1>
+    <h1>Welcome to My Dance Website!</h1>
   </header>
 
   <section>
-    <p>Hello! This is my first webpage made with HTML.</p>
-    <p>I can add images, links, and even interactive scripts.</p>
+    <p>Welcome to Dance Website
+This is a Fusion-dance Channel an amalgamation of Indian Classical and Western Dance </p>
+<p>© 2025 amagowni</p>
+  
   </section>
 
   <footer>
