Update webpage title and footer content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Webpage</title>
+  <title>You Can Do It</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,14 +12,14 @@
   </header>
 
   <section>
-    <p>Welcome to Dance Website
-This is a Fusion-dance Channel an amalgamation of Indian Classical and Western Dance </p>
+    <p>Welcome to Dance Website </p>
+<p>This is a Fusion-dance Channel an amalgamation of Indian Classical and Western Dance </p>
 <p>© 2025 amagowni</p>
   
   </section>
 
   <footer>
-    <p>&copy; 2025 My Name</p>
+    <p>&copy; 2025 amagowny</p>
   </footer>
 
   <script src="script.js"></script>
