Fix copyright name in footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 amagowny</p>
+    <p>&copy; 2025 amagowni</p>
   </footer>
 
   <script src="script.js"></script>
