Add hero section to index.html
Added a hero section with an image and heading.

Signed-off-by: askgoud103-blip <askgoud103@gmail.com>

--- a/index.html
+++ b/index.html
@@ -30,3 +30,7 @@
   <a href="about.html">About</a>
   <a href="contact.html">Contact</a>
 </nav>
+<section class="hero">
+  <img src="assets/hero.jpg" alt="Hero Image" />
+  <h2>Building simple and elegant web pages</h2>
+</section>
