Change hero section heading text
Signed-off-by: askgoud103-blip <askgoud103@gmail.com>

--- a/index.html
+++ b/index.html
@@ -33,5 +33,5 @@
 </nav>
 <section class="hero">
   <img src="assets/hero.jpg" alt="Hero Image" />
-  <h2>Building simple and elegant web pages</h2>
+  <h2>Add a feather in your cap</h2>
 </section>
